Updates to center and fix spacing

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -44,3 +44,10 @@ a:active {
   display: flex;
   align-items: center;
 }
+.bg{
+width:80%;
+
+}
+.spacer{
+    height:100px;
+}
